@@ -1,24 +1,52 @@
 package com.lorepo.icplayer.client.module.shape;
 
+import java.util.HashMap;
+import java.util.List;
+
 import com.google.gwt.core.client.JavaScriptObject;
 import com.google.gwt.dom.client.Element;
+import com.lorepo.icf.scripting.ICommandReceiver;
+import com.lorepo.icf.scripting.IType;
 import com.lorepo.icplayer.client.module.api.IModuleModel;
 import com.lorepo.icplayer.client.module.api.IModuleView;
 import com.lorepo.icplayer.client.module.api.IPresenter;
+import com.lorepo.icplayer.client.module.api.IStateful;
+import com.lorepo.icplayer.client.module.api.event.ResetPageEvent;
+import com.lorepo.icplayer.client.module.api.player.IJsonServices;
 import com.lorepo.icplayer.client.module.api.player.IPlayerServices;
 
-public class ShapePresenter implements IPresenter {
+public class ShapePresenter implements IPresenter, IStateful, ICommandReceiver {
 
 	public interface IDisplay extends IModuleView {
 		public Element getElement();
+		public void show();
+		public void hide();
 	}
 	
 	private IDisplay view;
 	private ShapeModule model;
 	private JavaScriptObject jsObject;
+	private boolean isVisible;
+	private IPlayerServices playerServices;
 	
 	public ShapePresenter(ShapeModule model, IPlayerServices services) {
 		this.model = model;
+		isVisible = model.isVisible();
+		this.playerServices = services;
+		
+		connectHandlers();
+	}
+	
+	private void connectHandlers() {
+		
+		playerServices.getEventBus().addHandler(ResetPageEvent.TYPE, 
+			new ResetPageEvent.Handler() {
+					
+				@Override
+				public void onResetPage(ResetPageEvent event) {
+					reset();
+				}
+		});
 	}
 
 	@Override
@@ -31,6 +59,19 @@ public class ShapePresenter implements IPresenter {
 	@Override
 	public IModuleModel getModel() {
 		return model;
+	}
+	
+	@Override
+	public String executeCommand(String commandName, List<IType> _) {
+		
+		if(commandName.compareTo("show") == 0){
+			show();
+		}
+		else if(commandName.compareTo("hide") == 0){
+			hide();
+		}
+		
+		return "";
 	}
 	
 	public JavaScriptObject getAsJavaScript(){
@@ -49,11 +90,84 @@ public class ShapePresenter implements IPresenter {
 			return x.@com.lorepo.icplayer.client.module.shape.ShapePresenter::getView()();
 		}
 		
+		presenter.show = function(){ 
+			x.@com.lorepo.icplayer.client.module.shape.ShapePresenter::show()();
+		}
+		
+		presenter.hide = function(){ 
+			x.@com.lorepo.icplayer.client.module.shape.ShapePresenter::hide()();
+		}
+		
 		return presenter;
 	}-*/;
 	
 	private Element getView(){
 		return view.getElement();
+	}
+
+	
+	private void show(){
+		isVisible = true;
+		if(view != null){
+			view.show();
+		}
+	}
+	
+	
+	private void hide(){
+		isVisible = false;
+		if(view != null){
+			view.hide();
+		}
+	}
+	
+	@Override
+	public String getState() {
+		IJsonServices json = playerServices.getJsonServices();
+		HashMap<String, String> state = new HashMap<String, String>();
+		state.put("isVisible", Boolean.toString(isVisible));
+		
+		return json.toJSONString(state);
+	}
+
+
+	@Override
+	public void setState(String stateObj) {
+		if (stateObj == null || stateObj.equals("")) {
+			return;
+		}
+		
+		IJsonServices json = playerServices.getJsonServices();
+		HashMap<String, String> state = json.decodeHashMap(stateObj);
+
+		if (state.containsKey("isVisible")) {
+			isVisible = Boolean.parseBoolean(state.get("isVisible"));
+			if (isVisible) { 
+				view.show();
+			} else {
+				view.hide();
+			}
+		}
+	}
+
+	@Override
+	public String getName() {
+		return model.getId();
+	}
+
+	@Override
+	public String getSerialId() {
+		return model.getId();
+	}
+
+	@Override
+	public void reset() {
+		if (model.isVisible()) {
+			show();
+		} else {
+			hide();
+		}
+		
 	}
 
 	@Override
@@ -63,11 +177,6 @@ public class ShapePresenter implements IPresenter {
 
 	@Override
 	public void setWorkMode() {
-		// Module is not an activity
-	}
-
-	@Override
-	public void reset() {
-		// Module is not an activity
+        // Module is not an activity
 	}
 }
