@@ -5,15 +5,25 @@ import com.lorepo.icplayer.client.framework.module.StyleUtils;
 import com.lorepo.icplayer.client.module.shape.ShapePresenter.IDisplay;
 
 public class ShapeView extends AbsolutePanel implements IDisplay {
-
 	public ShapeView(ShapeModule module, boolean isPreview){
 		setStyleName("ic_shape");
 		StyleUtils.applyInlineStyle(this, module);
 
-		if(!isPreview){
+		if (!isPreview) {
 			setVisible(module.isVisible());
 		}
 
 		getElement().setId(module.getId());
 	}
+
+	@Override
+	public void hide() {
+		setVisible(false);
+	}
+
+
+	@Override
+	public void show() {
+		setVisible(true);
+	}	
 }
