@@ -1,3 +1,4 @@
+2015-05-28 Added commands show and hide to Shape module
 2015-05-27 Fixed issue with input align in Writing Calculations module
 2015-05-27 Fixed issue with draggable element in editor in Ordering module
 2015-05-27 Fixed adding custom classes in editor in IWB Toolbar module
